Stop immediately if any of the commands during checkout fail

--- a/.github/workflows/modules.yml
+++ b/.github/workflows/modules.yml
@@ -142,6 +142,7 @@ jobs:
       - name: Checkout
         shell: pwsh
         run: |
+          $ErrorActionPreference = 'Stop'
           if (-not (Test-Path -Path ./modules-repo)) {
             git clone --branch ${{ inputs.ref_name }} --depth 1 https://github.com/${{ github.repository }}.git --recurse-submodule --shallow-submodules ./modules-repo
           }
