--- a/.github/workflows/samples.yml
+++ b/.github/workflows/samples.yml
@@ -33,11 +33,6 @@ on:
         required: false
         default: '0'
         type: string
-      release_notes:
-        description: 'Release notes'
-        required: false
-        default: ''
-        type: string
       pre_config_command:
         description: 'Execute a command before configuration steps'
         required: false
@@ -189,7 +184,6 @@ jobs:
         if: ${{ inputs.publish_mode != 'None' }}
         shell: bash
         run: |
-          release_notes="${{ inputs.release_notes }}"
           last_build_tag=$(git for-each-ref --sort=-v:refname --format='%(refname:short)' "refs/tags/${TAG_NAME_PREFIX}-*" | head -n 1)
           echo "Last build tag is $last_build_tag"
           ../../${{ env.NOSMAN_EXECUTABLE_NAME }} \
@@ -202,12 +196,13 @@ jobs:
             --verbose \
             --publisher-name "${{ env.GH_USERNAME }}" \
             --publisher-email "${{ env.GIT_EMAIL }}" \
-            --tag "${{ inputs.ref_name }}" \
-            --release-notes "$release_notes"
+            --tag "${{ inputs.ref_name }}"
         working-directory: samples-${{ inputs.ref_name }}/workspace/Module/samples-repo
 
       - name: Tag
         if: ${{ inputs.publish_mode != 'None' }}
+        env:
+            TAG_NAME_PREFIX: build.${{ inputs.ref_name }}-${{ matrix.runner[0] }}
         run: |
           git tag -a "${{ env.TAG_NAME_PREFIX }}-${{ inputs.build_number }}" -m "Build ${{ inputs.ref_name }}-${{ inputs.build_number }}"
           git push origin "${{ env.TAG_NAME_PREFIX }}-${{ inputs.build_number }}"
