--- a/.github/workflows/modules.yml
+++ b/.github/workflows/modules.yml
@@ -198,6 +198,14 @@ jobs:
           python sign_module.py "${{ github.workspace }}/modules-${{ inputs.ref_name }}/workspace/Module/modules-repo"
         shell: bash
 
+      - name: Upload PDBs
+        if: ${{ inputs.publish_mode != 'None' && matrix.runner[0] == 'Windows' }}
+        run: |
+          sentry-cli login --auth-token="${{ secrets.SENTRY_TOKEN }}"
+          sentry-cli debug-files upload -o mediaz-teknoloji -p nodos ./Project
+        shell: pwsh
+        working-directory: modules-${{ inputs.ref_name }}/
+
       - name: Publish (Changed)
         if: ${{ inputs.publish_mode == 'Only Changed' }}
         shell: bash
