--- a/.github/workflows/samples.yml
+++ b/.github/workflows/samples.yml
@@ -146,6 +146,7 @@ jobs:
           git fetch --tags
           git clean -ffd
           git checkout ${{ github.sha }}
+          git reset --hard
           git submodule update --force --recursive --init
           git status
         working-directory: samples-${{ inputs.ref_name }}/workspace/Module
