--- a/.github/workflows/modules.yml
+++ b/.github/workflows/modules.yml
@@ -202,49 +202,39 @@ jobs:
           cmake --build ../Project --config Release -j 8
         working-directory: modules-${{ inputs.ref_name }}/workspace
 
-      - name: Configure Firewall (Windows)
-        if: ${{ inputs.run_tests && matrix.runner[0] == 'Windows' }}
-        shell: pwsh
-        run: |
-          $ExePath = (Get-ChildItem -Path ./Engine -Filter "nosLauncher.exe" -Recurse | Select-Object -First 1).FullName
-          if ($ExePath) {
-            New-NetFirewallRule -DisplayName "CI Allow Nodos" -Direction Inbound -Program $ExePath -Action Allow -Profile Any -Enabled True
-            Write-Host "Firewall rule created for: $ExePath"
-          } else {
-            Write-Host "nosLauncher.exe not found in Engine directory"
-          }
-        working-directory: modules-${{ inputs.ref_name }}/workspace
-
-      - name: Configure Firewall (Linux)
-        if: ${{ inputs.run_tests && matrix.runner[0] == 'Linux' }}
-        shell: bash
-        run: |
-          # Find the nosLauncher executable
-          exe_path=$(find ./Engine -name "nosLauncher" -type f -executable | head -n 1)
-          if [ -n "$exe_path" ]; then
-            # Allow the application through UFW (if available)
-            if command -v ufw >/dev/null 2>&1; then
-              sudo ufw allow from any to any port 1024:65535 comment "CI Allow Nodos"
-              echo "UFW rule created for port range"
-            fi
-            
-            # Allow through iptables as fallback
-            if command -v iptables >/dev/null 2>&1; then
-              sudo iptables -I INPUT -j ACCEPT -m comment --comment "CI Allow Nodos"
-              echo "iptables rule created"
-            fi
-            
-            echo "Firewall configured for: $exe_path"
-          else
-            echo "nosLauncher not found in Engine directory"
-          fi
-        working-directory: modules-${{ inputs.ref_name }}/workspace
-
       - name: Regression Tests
         shell: pwsh
         if: ${{ inputs.run_tests }}
         run: |
+          $ErrorActionPreference = 'Stop'
+          
+          # Windows-specific firewall setup
+          if ("${{ matrix.runner[0] }}" -eq "Windows") {
+            $ExePath = (Get-ChildItem -Path ./Engine -Filter "nosLauncher.exe" -Recurse | Select-Object -First 1).FullName
+            if ($ExePath) {
+              # Remove existing rules if they exist
+              Remove-NetFirewallRule -DisplayName "CI Allow Nodos Inbound" -ErrorAction SilentlyContinue
+              Remove-NetFirewallRule -DisplayName "CI Allow Nodos Outbound" -ErrorAction SilentlyContinue
+              
+              # Create new firewall rules
+              New-NetFirewallRule -DisplayName "CI Allow Nodos Inbound" -Direction Inbound -Program $ExePath -Action Allow -Profile Any -Enabled True
+              New-NetFirewallRule -DisplayName "CI Allow Nodos Outbound" -Direction Outbound -Program $ExePath -Action Allow -Profile Any -Enabled True
+              Write-Host "Firewall rules created for: $ExePath"
+            } else {
+              Write-Host "Warning: nosLauncher.exe not found in Engine directory"
+            }
+          }
+          
+          # Run tests
+          Write-Host "Running regression tests..."
           ./nodos test
+          
+          # Cleanup firewall rules on Windows
+          if ("${{ matrix.runner[0] }}" -eq "Windows") {
+            Remove-NetFirewallRule -DisplayName "CI Allow Nodos Inbound" -ErrorAction SilentlyContinue
+            Remove-NetFirewallRule -DisplayName "CI Allow Nodos Outbound" -ErrorAction SilentlyContinue
+            Write-Host "Firewall rules cleaned up"
+          }
         working-directory: modules-${{ inputs.ref_name }}/workspace
 
       - name: Sign Binaries
